--- a/src/options/options.css
+++ b/src/options/options.css
@@ -1,4 +1,3 @@
-
 /*
     #242424
     #dfc74c
@@ -6,6 +5,9 @@
     #e5d27c
     #f1f0e8
     #ffda45
+    #46443f
+    #908d88
+    #e2e1da
  */
 
 
@@ -14,6 +16,7 @@ html {
 
 h1{
     text-decoration: underline;
+    text-align: center;
 }
 
 *{
@@ -23,25 +26,29 @@ h1{
 
 body{
     background-color: #f1f0e8;
-    overflow-y: scroll;
+    overflow-y: hidden;
     margin-bottom: 100px;
+    font-family:  "メイリオ",Meiryo,"ヒラギノ角ゴ Pro W3",
+    "Hiragino Kaku Gothic Pro","ＭＳ Ｐゴシック",
+    "MS UI Gothic",Helvetica,Arial,sans-serif;
 }
 
 table{
-    border:none;
+    background-color: white;
     border-collapse:collapse;
+    border: 0px solid black;
     line-height: 2;
     display: block;
-    table-layout: fixed;
     font-size: 1em;
     margin-left: auto;
-    margin-right:auto;
+    table-layout: fixed;
 }
 
-tbody, th, td, tr {
-    border: 2px solid#242424;
+th, td, tr {
     border-collapse:collapse;
+    border: 2px solid black;
 }
+
 
 tbody{
     width:100%;
@@ -49,19 +56,46 @@ tbody{
     display:table;
 }
 
-div{
-    text-align: center;
+#keywordTable tr{
+    border-top:none;
 }
 
-#table-outer{
-    width:60%;
+.table-header tr {
+    border-bottom: none;
+    background-color: #ffda45;
+}
+
+
+
+.table-outer{
+    text-align:center;
+    display: block;
+    width:65%;
     margin-left: auto;
     margin-right:auto;
+    max-height:80vh;
+    overflow-y: hidden;
+    overflow-x:hidden;
+}
+
+.table-outer:hover{
+    overflow-y:overlay;
+}
+
+.header-outer{
+    text-align:center;
+    display: block;
+    width:65%;
+    margin-left: auto;
+    margin-right:auto;
+    max-height:80vh;
 }
 
 
-th {
-    background-color: #ffda45;
+
+table div {
+    height:100%;
+    width:auto;
 }
 
 
@@ -71,18 +105,6 @@ tr{
     min-width:100%;
     width:100%;
 }
-
-tr:nth-child(odd) {
-}
-
-tr:nth-child(even) {
-}
-
-
-td{
-    background-color: white;
-}
-
 
 td.translation-column{
     text-align: left;
@@ -96,19 +118,42 @@ td[colspan = "3"].table-placeholder{
 }
 
 
+th:nth-child(1){
+    font-weight:bold;
+    width:28%;
+    max-width:28%;
+}
+
+th:nth-child(2){
+    max-width:70%;
+    width:70%;
+}
+
+th:nth-child(3){
+    width:auto;
+    line-height: 0;
+    color: #ffda45;
+    cursor:default;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+
 td:nth-child(1){
     font-weight:bold;
-    width:25%;
-    max-width:25%;
+    width:28%;
+    max-width:28%;
 }
 
 td:nth-child(2){
-    max-width:75%;
-    width:75%;
+    max-width:70%;
+    width:70%;
 }
 
 td:nth-child(3){
-    width:auto;
+    width:2%;
+    max-width:2%;
 }
 
 td[contentEditable="true"].input-error{
@@ -116,22 +161,27 @@ td[contentEditable="true"].input-error{
     background:#FFCCCC;
 }
 
-
-.keyword-row{
-}
-
-.save-button{
-    display:block;
+#add-button {
+    display: block;
     margin-left: auto;
     margin-right: auto;
+}
+
+#save-button{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top:4px;
+    margin-bottom:4px;
 }
 
 
 .delete-column{
     font-weight: bold;
     border-left: none;
-    color: red;
+    color: #33322f;
     font-size:2em;
+    cursor:pointer;
 }
 
 .translation-column {
@@ -139,14 +189,11 @@ td[contentEditable="true"].input-error{
 }
 
 
-h1{
-    text-align: center;
-}
 
-
-.save-add{
-    display:inline-block;
-    position:absolute;
+#save-add{
+    margin:8px;
+    display: block;
+    align-items: center;
 }
 
 
@@ -194,7 +241,7 @@ input[type="text"]#translationaddbox.input-error {
 }
 
 .keyword-tag:nth-child(even) {
-     background: #5a4803;
+     background: #46443f;
 }
 
 .keyword-tag {
@@ -218,4 +265,26 @@ input[type="text"]#translationaddbox.input-error {
     cursor:default;
     font-weight: bold;
     vertical-align: bottom;
+}
+
+
+
+
+::-webkit-scrollbar {
+    display: none; /*tmp*/
+    width: .5%;
+    background-color: #F5F5F5;
+    background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #33322f;
+    border-radius:4px;
+}
+
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    background-color: transparent;
+   background-color: #f1f0e8;
+    border-radius:4px;
 }
