--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -1,3 +1,4 @@
+
 /*
     #242424
     #dfc74c
@@ -5,33 +6,123 @@
     #e5d27c
     #f1f0e8
     #ffda45
+    #46443f
+    #908d88
+    #e2e1da
+    #333
+
+    Text: #33322f;
  */
 
 
-div{
-	width:100%;
-	font-weight: bold;
-	margin-top: : 1em;
-	margin-bottom: 1em;
-	margin:auto;
-	display:block;
+html {
+    background-color: #f1f0e8;
+}
+
+h2{
+    color: #33322f;
+	text-align: center;
+    text-decoration: underline;
+    background-color: #f1f0e8;
+}
+
+body{
+	width:300px;
+   height:400px;
+    overflow-y: scroll;
+    margin-bottom: 10px;
+    font-family:  "メイリオ",Meiryo,"ヒラギノ角ゴ Pro W3",
+    "Hiragino Kaku Gothic Pro","ＭＳ Ｐゴシック",
+    "MS UI Gothic",Helvetica,Arial,sans-serif;
+    position: relative;
 }
 
 
-#dictionaryPrint {
-	width : 100%;
-	min-height:200px;
-	height:auto;
-	overflow-y:scroll;
-	background-color: white;
-	z-index: 0;
-	border:1px dashed #242424;;
+::-webkit-scrollbar {
+    width: 8px;
+    background-color: #F5F5F5;
 }
 
-body {
-	height:500px;
-	width:500px;
-	background-color: #f1f0e8;
-	border:5px solid #242424;
+::-webkit-scrollbar-thumb {
+    background-color: #33322f;
+    border-radius:4px;
+}
+
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    background-color: #f1f0e8;
+    border-radius:4px;
+}
+
+
+
+
+
+
+.tooltip{
+    position:relative;
+    border-bottom: 1px dotted black;
+}
+
+.tooltip .tooltip-text{
+    visibility:hidden;
+
+    opacity: 1;
+    transition: visibility .15s;
+    width:50%;
+    background-color:black;
+    color:white;
+    text-align: center;
+    padding: 5px 0;
+    border-radius: 6px;
+
+    position:absolute;
+    z-index: 1;
+
+    bottom:60%;
+    left:50%;
+    margin-left: -25%;
+}
+
+.tooltip .tooltip-text::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: black transparent transparent transparent;
+    z-index: 999;
+}
+
+
+.favorite-search{
+    display:inline-block;
+	color:white;
+	font-weight:bold;
+	background-color:#333;
+	cursor: pointer;
 	display:block;
+	padding: 12px;
+	margin:2px;
+	border-radius:5px;
+}
+
+
+
+.favorite-search:hover{
+	background-color:  #ffda45;
+    color:#33322f;
+}
+
+.favorite-search.placeholder{
+    text-align: center;
+    cursor:default;
+}
+
+
+.favorite-search.placeholder:hover {
+    background-color:#333;
+    color:white;
 }
